--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -6,6 +6,9 @@
   "homepage": "",
   "license": "ISC",
   "main": "lib/index.js",
+  "bin": {
+    "zc-cli": "bin/index.js"
+  },
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -15,5 +18,8 @@
   ],
   "scripts": {
     "test": "echo \"Error: run tests from core"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
