--- a/core/cli/package.json
+++ b/core/cli/package.json
@@ -21,5 +21,11 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "@zc-cli/log": "file:../../utils/log",
+    "colors": "^1.4.0",
+    "import-local": "^3.0.2",
+    "semver": "^7.3.5"
   }
 }
