--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "lerna": "^4.0.0"
+    "@zc-cli/core": "^1.0.2",
+    "lerna": "^4.0.0",
+    "zc-cli": "0.0.3"
   }
 }
