--- a/models/package/package.json
+++ b/models/package/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@zc-cli/log",
-  "version": "1.0.3",
+  "name": "@zc-cli/package",
+  "version": "1.0.0",
   "description": "> TODO: description",
   "author": "zhangchuan <993090861@qq.com>",
   "homepage": "https://github.com/ZhangChuan01/zc-cli#readme",
@@ -23,11 +23,16 @@
   "scripts": {
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
+  "dependencies": {
+    "@zc-cli/format-path": "file:../../utils/format-path",
+    "@zc-cli/get-npm-info": "file:../../utils/get-npm-info",
+    "@zc-cli/utils": "file:../../utils/utils",
+    "fs-extra": "^10.0.0",
+    "npminstall": "^4.11.0",
+    "path-exists": "^4.0.0",
+    "pkg-dir": "^5.0.0"
+  },
   "bugs": {
     "url": "https://github.com/ZhangChuan01/zc-cli/issues"
-  },
-  "dependencies": {
-    "fs-extra": "^10.0.0",
-    "npmlog": "^4.1.2"
   }
 }
